--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -61,9 +61,11 @@
       align-items: center;
 
     }
-    p {
+    .message p {
         padding-top: 15px;
         padding-bottom: 15px ;
+        margin-top: 0px;
+        margin-bottom: 0px;
     }
 
     .message {
@@ -107,9 +109,6 @@
         </div>
       </div>
     </div>
-
-
-
   </div>
 </body>
 
